--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -30,17 +33,9 @@ jobs:
       - name: Build Website
         run: trunk build --release
 
-      - name: Deploy to GitHub Pages
-        run: |
-          git worktree add gh-pages gh-pages
-          git config user.name "deploy-rs"
-          git config user.email "deploy@azumi.is-an.app"
-          cd gh-pages
-
-          # Delete the ref to avoid keeping history.
-          git update-ref -d refs/heads/gh-pages
-          rm -rf *
-          mv ../dist/* .
-          git add .
-          git commit -m "Redeploy Website"
-          git push --force
+      - name: Deploy Website
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist
+          clean: true
+          force: true
